# data-engineer-task

./: .gitignore  LICENSE  README.md  docker-compose.yaml  main.py  pipeline.py  pyproject.toml  scripts.py  seed.py
migrations/: V1__create_schema.sql
sql/analytics/: advertiser_ctr.sql  campaign_ctr.sql  daily_metrics.sql
sql/init/: advertiser.sql  advertiser_stats.sql  advertiser_stats_init.sql  campaign.sql  campaign_stats.sql  campaign_stats_init.sql  clicks.sql  daily_stats.sql  daily_stats_init.sql  impressions.sql
